--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ kbd{
     font-size: 30px;
     border-radius: .5rem;
 }
+.playing{
+    font-size: 40px;
+    border: 5px solid orange;
+}
 kbd:hover{
     font-size: 40px;
     border: 5px solid orange;
