--- a/files/style.css
+++ b/files/style.css
@@ -56,10 +56,18 @@ kbd:hover {
     .sound {
         width: 70px;
     }
+    #contact{
+        margin: 0;
+        padding: 5px;
+    }
+    .side1, .side2{
+        width: 5%;
+        height: 150px;
+    }
 }
 #contact{
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-bottom: 50px;
     margin-top: 20px;
     display: flex;
@@ -67,7 +75,7 @@ kbd:hover {
     visibility: hidden;
 }
 .side1, .side2{
-    width: 100px;
+    width: 10%;
     height: 200px;
     margin: 5px;
     padding: 20px;
